# gccrs

./: .editorconfig  .gitignore  .travis.yml  CONTRIBUTING.md  ChangeLog  Dockerfile  MAINTAINERS  Makefile.def  Makefile.in  Makefile.tpl  README.md  README.org  config-ml.in  configure  configure.ac  libtool.m4  ltmain.sh  travis-build.sh
.forgejo/: CODEOWNERS
.github/: alpine_32bit_log_warnings  bors.toml  bors_log_expected_warnings  clang-tidy.yml  glibcxx_ubuntu64b_log_expected_warnings  log_expected_warnings  safe-grep
INSTALL/: README
c++tools/: ChangeLog  configure  configure.ac
config/: ChangeLog  acx.m4  asmcfi.m4  bitfields.m4  cet.m4  codeset.m4  enable.m4  gcc-plugin.m4  hwcaps.m4  isl.m4  lcmessage.m4  mh-cygwin  mh-mingw  no-executables.m4  po.m4  tls.m4
contrib/: ChangeLog  check-MAINTAINERS.py  check_GNU_style_lib.py  dg-extract-results.py  download_prerequisites  filter-clang-warnings.py  gcc_update  texi2pod.pl  update-copyright.py
contrib/bpf-vmtest-tool/: README  bpf.py  config.py  kernel.py  main.py  pyproject.toml  utils.py  vm.py
contrib/bpf-vmtest-tool/tests/: test_cli.py
elfcpp/: ChangeLog  arm.h  dwarf.h  elfcpp.h  elfcpp_file.h  elfcpp_internal.h  elfcpp_swap.h  i386.h  powerpc.h  sparc.h  x86_64.h
fixincludes/: ChangeLog  README  configure  configure.ac  fixinc.in  fixincl.c  fixincl.x  fixlib.c  inclhack.def
gcc/: ChangeLog  DATESTAMP  Makefile.in  a.out  acinclude.m4  adjust-alignment.cc  alias.cc  alloc-pool.h  asan.cc  asan.h  asm-toplevel.cc  attr-fnspec.h  attr-urls.def  attribs.cc  auto-profile.cc  auto-profile.h  avoid-store-forwarding.cc  avoid-store-forwarding.h  basic-block.h  bbitmap.h  bitmap.cc  bitmap.h  btfout.cc  builtin-types.def  builtins.cc  builtins.def  builtins.h  c-common.c  c-decl.c  c-lex.c  c-typeck.c  c.opt  calls.cc  ccmp.cc  ccmp.h  cfg.cc  cfganal.cc  cfgbuild.c  cfgbuild.cc  cfgcleanup.cc  (+424 more)
gnattools/: ChangeLog  configure  configure.ac
gotools/: ChangeLog  configure  configure.ac
include/: hsa.h  (+11 more)
libgcobol/: ChangeLog  LICENSE  Makefile.am  Makefile.in  README  acinclude.m4  aclocal.m4  charmaps.cc  charmaps.h  common-defs.h  configure  configure.ac  configure.tgt  constants.cc  ec.h  encodings.h  exceptl.h  gcobolio.h  gfileio.cc  gfileio.h  gmath.cc  gmath.h  inspect.cc  intrinsic.cc  io.cc  io.h  libgcobol-fp.h  libgcobol.cc  libgcobol.h  stringbin.cc  stringbin.h  valconv.cc  valconv.h  xmlparse.cc
libgcobol/compat/: README.md
libgcobol/compat/gnu/cpy/: cblproto.cpy  stored-char-length.cpy
libgcobol/compat/gnu/lib/: CBL_ALLOC_MEM.cbl  CBL_CHECK_FILE_EXIST.cbl  CBL_CLOSE_FILE.cbl  CBL_CREATE_FILE.cbl  CBL_DELETE_FILE.cbl  CBL_FREE_MEM.cbl  CBL_OPEN_FILE.cbl  CBL_READ_FILE.cbl  CBL_WRITE_FILE.cbl  cbl_alloc_mem.3  cbl_alloc_mem.cbl3  cbl_check_file_exist.3  cbl_close_file.3  cbl_create_file.3  cbl_delete_file.3  cbl_free_mem.3  cbl_open_file.3  cbl_read_file.3  cbl_write_file.3
libgcobol/compat/gnu/udf/: cobrt-file-status.cbl  stored-char-length.cbl
libgcobol/compat/t/: Makefile  smoke.cbl
libgcobol/m4/: autoconf.m4
libgcobol/posix/cpy/: posix-close.cpy  posix-errno.cbl  posix-errno.cpy  posix-exit.cpy  posix-fstat.cpy  posix-ftruncate.cpy  posix-localtime.cpy  posix-lseek.cpy  posix-mkdir.cpy  posix-open.cpy  posix-read.cpy  posix-stat.cpy  posix-unlink.cpy  posix-write.cpy  psx-lseek.cpy  psx-open.cpy  statbuf.cpy  tm.cpy
libgcobol/posix/shim/: fstat.cc  lseek.cc  open.cc
libgcobol/posix/t/: errno.cbl  exit.cbl  localtime.cbl  stat.cbl
libgcobol/posix/udf/: posix-close.cbl  posix-errno.cbl  posix-exit.cbl  posix-fstat.cbl  posix-ftruncate.cbl  posix-localtime.cbl  posix-lseek.cbl  posix-mkdir.cbl  posix-open.cbl  posix-read.cbl  posix-stat.cbl  posix-unlink.cbl  posix-write.cbl
libgo/: MERGE  Makefile.am  Makefile.in  README  acinclude.m4  aclocal.m4  config.h.in  configure  configure.ac  merge.sh  mksysinfo.sh
libgo/go/big/: arith.go
libgo/go/bufio/: bufio.go
libgo/go/bytes/: bytes_test.go  indexbyte.c
libgo/go/crypto/sha256/: sha256.go
libgo/go/debug/proc/: proc_linux.go
libgo/go/encoding/ascii85/: ascii85.go
libgo/go/exp/eval/: eval_test.go  expr.go  expr1.go
libgo/go/exp/parser/: parser.go
libgo/go/fmt/: format.go  print.go
libgo/go/go/ast/: walk.go
libgo/go/go/parser/: parser.go
libgo/go/go/printer/: printer.go
libgo/go/gob/: decode.go  encode.go
libgo/go/http/: lex.go  server.go
libgo/go/log/: log_test.go
libgo/go/math/: sqrt.go
libgo/go/net/: fd.go  fd_rtems.go  net_test.go  unixsock.go
libgo/go/net/http/: client_test.go  fs.go  fs_test.go  serve_test.go  server.go  transport.go
libgo/go/os/: dir.go  file.go  file_unix.go  os_test.go  stat.go
libgo/go/os/signal/: mkunix.sh
libgo/go/reflect/: all_test.go  type.go  value.go
libgo/go/regexp/: regexp.go
libgo/go/runtime/: error.go  type.go
libgo/go/sync/: cas.c
libgo/go/tabwriter/: tabwriter_test.go
libgo/go/template/: template.go
libgo/go/testing/: regexp.go
libgo/go/utf8/: utf8.go
libgo/go/websocket/: client.go  server.go
libgo/runtime/: array.h  cgo2c.c  chan.cgo  go-alloc.h  go-assert-interface.c  go-bad-index.c  go-bad-makeslice.c  go-byte-array-to-string.c  go-caller.c  go-can-convert-interface.c  go-chan-cap.c  go-chan-len.c  go-check-interface.c  go-close.c  go-closed.c  go-construct-map.c  go-convert-interface.c  go-defer-stack.c  go-defer.c  go-deferred-recover.c  go-go.c  go-goexit.c  go-gomaxprocs.c  go-int-array-to-string.c  go-int-to-string.c  go-interface-compare.c  go-interface-to-object.c  go-interface-to-pointer.c  go-lock-os-thread.c  go-main.c  go-map-delete.c  go-map-index.c  go-map-range.c  go-nanotime.c  go-new-channel.c  go-new-interface-object.c  go-new-interface-pointer.c  go-new-map.c  go-new.c  go-note.c  (+75 more)
libgo/syscalls/: errno.c  errstr.go  errstr_rtems.go  exec.go  socket.go  socket_bsd.go  socket_epoll.go  socket_linux.go  syscall.go  syscall_linux.go  syscall_unix.go  sysfile.go  sysfile_posix.go
libgo/testsuite/: Makefile.am  Makefile.in  gotest
libgo/testsuite/lib/: libgo.exp
libgo/testsuite/libgo.testmain/: testmain.exp
(+19937 files in other folders)
